// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wordBreakCjk renders 0 1`] = `
Array [
  .c0 {
  word-break-cjk: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakCjk renders function 1`] = `
Array [
  .c0 {
  word-break-cjk: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: has;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: has;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakCjk renders invalid theme path 1`] = `
Array [
  .c0 {
  word-break-cjk: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakCjk renders negative number 1`] = `
Array [
  .c0 {
  word-break-cjk: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakCjk renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  word-break-cjk: July;
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-break-cjk: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: July;
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-break-cjk: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-break-cjk: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-break-cjk: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakCjk renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    word-break-cjk: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-break-cjk: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    word-break-cjk: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-break-cjk: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-break-cjk: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-break-cjk: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-break-cjk: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakCjk renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  word-break-cjk: July;
}

@media May {
  .c0 {
    word-break-cjk: August;
  }
}

@media April {
  .c0 {
    word-break-cjk: September;
  }
}

@media January {
  .c0 {
    word-break-cjk: November;
  }
}

@media April {
  .c0 {
    word-break-cjk: August;
  }
}

@media June {
  .c0 {
    word-break-cjk: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: July;
}

@media May {
  .c0 {
    word-break-cjk: August;
  }
}

@media April {
  .c0 {
    word-break-cjk: September;
  }
}

@media January {
  .c0 {
    word-break-cjk: November;
  }
}

@media April {
  .c0 {
    word-break-cjk: August;
  }
}

@media June {
  .c0 {
    word-break-cjk: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-break-cjk: November;
  }
}

@media April {
  .c0 {
    word-break-cjk: January;
  }
}

@media January {
  .c0 {
    word-break-cjk: December;
  }
}

@media April {
  .c0 {
    word-break-cjk: April;
  }
}

@media June {
  .c0 {
    word-break-cjk: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-break-cjk: November;
  }
}

@media April {
  .c0 {
    word-break-cjk: January;
  }
}

@media January {
  .c0 {
    word-break-cjk: December;
  }
}

@media April {
  .c0 {
    word-break-cjk: April;
  }
}

@media June {
  .c0 {
    word-break-cjk: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakCjk renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    word-break-cjk: July;
  }
}

@media April {
  .c0 {
    word-break-cjk: August;
  }
}

@media January {
  .c0 {
    word-break-cjk: September;
  }
}

@media April {
  .c0 {
    word-break-cjk: November;
  }
}

@media June {
  .c0 {
    word-break-cjk: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    word-break-cjk: July;
  }
}

@media April {
  .c0 {
    word-break-cjk: August;
  }
}

@media January {
  .c0 {
    word-break-cjk: September;
  }
}

@media April {
  .c0 {
    word-break-cjk: November;
  }
}

@media June {
  .c0 {
    word-break-cjk: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-break-cjk: January;
  }
}

@media April {
  .c0 {
    word-break-cjk: December;
  }
}

@media January {
  .c0 {
    word-break-cjk: April;
  }
}

@media April {
  .c0 {
    word-break-cjk: May;
  }
}

@media June {
  .c0 {
    word-break-cjk: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-break-cjk: January;
  }
}

@media April {
  .c0 {
    word-break-cjk: December;
  }
}

@media January {
  .c0 {
    word-break-cjk: April;
  }
}

@media April {
  .c0 {
    word-break-cjk: May;
  }
}

@media June {
  .c0 {
    word-break-cjk: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakCjk renders postitive number 1`] = `
Array [
  .c0 {
  word-break-cjk: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakCjk renders string 1`] = `
Array [
  .c0 {
  word-break-cjk: July;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: July;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: June;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: June;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBreakCjk renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`wordBreakCjk renders valid theme path 1`] = `
Array [
  .c0 {
  word-break-cjk: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-break-cjk: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
